--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "globule": "^0.2.0",
     "i18n": "^0.6.0",
     "jade": "^1.11.0",
+    "map-stream": "0.0.6",
+    "vinyl": "^1.1.1",
+    "vinyl-fs": "^2.3.1",
     "yamljs": "^0.2.4",
     "yargs": "^3.32.0"
   }
