--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,6 @@ langs:
   - en
   - ru
 default: 'it'
-localesDir: './locale'
-templateDir: './templates'
-outputDir: './build'
+localesDir: 'locale'
+templateDir: 'templates'
+outputDir: 'build'
