i dunno, maybe this works

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "globule": "^0.2.0",
     "i18n": "^0.6.0",
     "jade": "^1.11.0",
+    "marked": "^0.3.5",
     "mkdirp": "^0.5.1",
     "vinyl": "^1.1.1",
     "yamljs": "^0.2.4",
