--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "init": "node index.js"
+    "dev": "node_modules/.bin/babel-node index.js"
   },
   "keywords": [
     "i18n",
@@ -14,6 +14,8 @@
   "author": "Alessio Zappa",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "better-console": "^0.2.4",
     "globule": "^0.2.0",
