--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node_modules/.bin/babel-node index.js"
+    "dev": "./node_modules/.bin/babel-node index.es6",
+    "build": "./node_modules/.bin/babel index.es6 -o index.js",
+    "test": "npm run dev -- --testpug"
   },
   "keywords": [
     "i18n",
@@ -14,17 +16,19 @@
   "author": "Alessio Zappa",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "better-console": "^0.2.4",
-    "globule": "^0.2.0",
-    "i18n": "^0.6.0",
-    "jade": "^1.11.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "globule": "^1.0.0",
+    "i18n": "^0.8.2",
     "marked": "^0.3.5",
     "mkdirp": "^0.5.1",
+    "pug": "^2.0.0-alpha8",
     "vinyl": "^1.1.1",
-    "yamljs": "^0.2.4",
-    "yargs": "^3.32.0"
+    "yamljs": "^0.2.7",
+    "yargs": "^4.7.1"
   }
 }
