--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "thundaga",
   "version": "1.0.0",
-  "description": "",
+  "description": "Multilang static site builder with pug and yaml files for translations.",
   "main": "index.js",
   "scripts": {
-    "dev": "./node_modules/.bin/babel-node index.es6",
-    "build": "./node_modules/.bin/babel index.es6 -o index.js",
+    "dev": "./node_modules/.bin/node index.js",
     "test": "npm run dev -- --testpug"
   },
   "keywords": [
@@ -16,19 +15,16 @@
   "author": "Alessio Zappa",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.18.0",
     "better-console": "^0.2.4",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "globule": "^1.0.0",
-    "i18n": "^0.8.2",
-    "marked": "^0.3.5",
+    "eslint-config-airbnb-base": "^9.0.0",
+    "globule": "^1.1.0",
+    "i18n": "^0.8.3",
+    "marked": "^0.3.6",
     "mkdirp": "^0.5.1",
-    "pug": "^2.0.0-alpha8",
-    "vinyl": "^1.1.1",
-    "yamljs": "^0.2.7",
-    "yargs": "^4.7.1"
+    "pug": "^2.0.0-beta6",
+    "vinyl": "^2.0.0",
+    "yamljs": "^0.2.8",
+    "yargs": "^6.3.0"
   }
 }
