--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "better-console": "^0.2.4",
     "globule": "^1.1.0",
     "i18n": "^0.8.3",
+    "lodash": "^4.16.6",
     "markdown-it": "^8.0.1",
     "mkdirp": "^0.5.1",
     "pug": "^2.0.0-beta6",
