--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
-  "extends": "airbnb-base",
-  "rules": {
-    "max-len": [0]
+  "extends": "airbnb-base/legacy",
+  "env": {
+    "es6": true
   }
 }
