--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
   "author": "Alessio Zappa",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-es2015": "^6.18.0",
     "better-console": "^0.2.4",
     "globule": "^1.1.0",
     "i18n": "^0.8.3",
-    "lodash": "^4.16.6",
-    "markdown-it": "^8.0.1",
+    "lodash.property": "^4.4.2",
+    "markdown-it": "^8.4.2",
     "mkdirp": "^0.5.1",
     "pug": "^2.0.0-beta6",
     "vinyl": "^2.0.0",
     "yamljs": "^0.2.8",
     "yargs": "^6.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
